# Vehicle-Detection-Qt-Cmake-Version

./: README.md
Vehicle Detection V 1.0.02/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Vehicle Detection V 1.0.02/Vehicle Detection V 1.0.02/: CMakeCache.txt  Makefile  cmake_install.cmake
Vehicle Detection V 1.0.02/Vehicle Detection V 1.0.02/Desktop-Debug/: Makefile  VehicleDetection  cmake_install.cmake
Vehicle Detection V 1.0.02/Vehicle Detection V 1.0.02/Desktop-Debug/VehicleDetection_autogen/: deps
Vehicle Detection V 1.0.02/Vehicle Detection V 1.0.02/Desktop-Debug/VehicleDetection_autogen/EWIEGA46WW/: moc_mainwindow.cpp
Vehicle Detection V 1.0.02/Vehicle Detection V 1.0.02/Desktop-Debug/VehicleDetection_autogen/include/: ui_mainwindow.h
Vehicle Detection V 1.0.02/Vehicle Detection V 1.0.02/VehicleDetection_autogen/: deps
Vehicle Detection V 1.0.02/Vehicle Detection V 1.0.02/VehicleDetection_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
Vehicle Detection V 1.0.02/Vehicle Detection V 1.0.02/VehicleDetection_autogen/include/: ui_mainwindow.h
VehicleDetection/: mainwindow.cpp  mainwindow.h  mainwindow.ui
